# sales-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/common/: db.py  models.py
src/connectors/: wallapop.py
src/performance_engine/: actions.py  cli.py  collector.py  digest.py  funnel.py  recommendations.py
tests/: test_actions.py  test_daily_metrics.py  test_funnel.py  test_recommendations.py
ui/: app.py
